tests/functional/lang/eval-fail-replaceStrings-1.err.exp
error:
       … while calling the 'replaceStrings' builtin
         at /pwd/lang/eval-fail-replaceStrings-1.nix:1:1:
            1| builtins.replaceStrings 0 0 { }
             | ^
            2|

       … while evaluating the first argument passed to builtins.replaceStrings

       error: expected a list but found an integer: 0
